...
              Align(
                  alignment: Alignment.centerRight,
                  child: Padding(
                    padding: const EdgeInsets.only(right: 20.0),
                    child: Text(
                      "Daily Chart",
                      key:Key("daily-chart"),
                      style: TextStyle(fontSize: 20, fontWeight: FontWeight.bold),
                    ),
                  )),
              _buildChart([new GallonsPerDay(DateFormat('EE d MMM').format(DateTime.now()), state.totConsumption)]),
            ],
          );
...
            ),
          );
        } else {
          return Center(
              child: Text(
            "Add your consumption to view stats",
            key: Key("empty_stats"),
            style: TextStyle(fontSize: 20),
          ));
        }
      },
    );
  }
...
