...
            "Night Mode",
            style: TextStyle(fontSize: 23),
          ),
          trailing: BlocBuilder<ThemeBloc, ThemeState>(
          builder: (context, state) {
            return Switch(
              key: Key("dark-mode"),
                value: state.switchValue,
                onChanged: (changedValue) {
                  BlocProvider.of<ThemeBloc>(context)
                      .add(ThemeChanged(switchVal:state.switchValue, theme: !widget.darkModeSwitch?AppTheme.DarkTheme:AppTheme.LightTheme));
                });
          }
...
